# canary

./: .cmake-format.py  AGENTS.md  CMakePresets.json  config.lua.dist  pasted.txt  schema.sql
.github/: e2e-controlled-server.env  imbuement-vibrancy.patch  oam-020-reconciliation-head-trigger  oam-022-program-final-gate-trigger  oam-022-program-reconciliation-trigger  temp-dispatcher-latency-trigger  temp-house-wrap-clean-trigger  temp-house-wrap-trigger
.github/asset-export-1511/: export_subset.py  item_ids.txt
.github/automation/: ci-retrigger-78.txt  fix-3374-3453-3645-error.txt  fix-3374-3453-3645.patch  format-bank-system.patch
.github/item-audit/: payload.tar.gz.b64
data-otservbr-global/: account_quests.lua
docs/: issue-3724-note.tmp  upstream-issue-backlog.md
grafana/: gameplay-analytics-dashboard.json
schema/: gameplay_analytics_retention.sql  gameplay_analytics_views.sql
src/: .equipment-upgrade-trigger  canary_server.cpp  canary_server.hpp  main.cpp
tests/unit/players/: CMakeLists.txt  forge_effect_policy_test.cpp  forge_test.cpp  forge_transaction_test.cpp  wheel_validation_test.cpp
tests/unit/players/components/: CMakeLists.txt  player_achievement_test.cpp  weapon_proficiency_test.cpp
tests/unit/players/condition/: CMakeLists.txt  condition_light_test.cpp
tests/unit/players/imbuements/: CMakeLists.txt  imbuements_test.cpp
tools/: apply_disconnect_protection.py  check_lua_api_quality.py  fix_disconnect_protection_format.py  oam_019_program_reconcile.py
vcproj/: Directory.Build.targets  canary.vcxproj  settings.props
(+1967 files in other folders)
